--- a/PhicommK3/lede/.config
+++ b/PhicommK3/lede/.config
@@ -426,6 +426,7 @@ CONFIG_FEED_routing=y
 CONFIG_FEED_telephony=y
 CONFIG_FEED_passwall=y
 
+
 #
 # Base system
 #
@@ -4439,6 +4440,7 @@ CONFIG_PACKAGE_luci-app-mwan3=y
 # CONFIG_PACKAGE_luci-app-p910nd is not set
 # CONFIG_PACKAGE_luci-app-pagekitec is not set
 CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-openclash=y
 
 #
 # Configuration
